Basic ego support for JWT
