# src/config/swagger.json
@@ -9,6 +9,13 @@
     "http",
     "https"
   ],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
   "consumes": [
     "application/json"
   ],
@@ -66,6 +73,11 @@
             "schema": {
               "$ref": "#/definitions/CreateDictionary"
             }
+          }
+        ],
+        "security": [
+          {
+            "Bearer": []
           }
         ],
         "responses": {
@@ -127,6 +139,11 @@
             }
           }
         ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -163,6 +180,11 @@
             "schema": {
               "type": "object"
             }
+          }
+        ],
+        "security": [
+          {
+            "Bearer": []
           }
         ],
         "responses": {
